--- a/Guess Who/MainStoryboard.storyboard
+++ b/Guess Who/MainStoryboard.storyboard
@@ -143,6 +143,7 @@
                                 </state>
                                 <connections>
                                     <action selector="answerButtonPressed:" destination="mr7-6u-u8H" eventType="touchUpInside" id="23Y-3i-kzI"/>
+                                    <action selector="answerButtonTouchDown" destination="mr7-6u-u8H" eventType="touchDown" id="hLa-a7-JTU"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="MC5-kH-eQI">
@@ -158,6 +159,7 @@
                                 </state>
                                 <connections>
                                     <action selector="answerButtonPressed:" destination="mr7-6u-u8H" eventType="touchUpInside" id="LGp-gY-8DU"/>
+                                    <action selector="answerButtonTouchDown" destination="mr7-6u-u8H" eventType="touchDown" id="sCw-36-ANg"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="diV-3t-sdq">
@@ -173,6 +175,8 @@
                                 </state>
                                 <connections>
                                     <action selector="answerButtonPressed:" destination="mr7-6u-u8H" eventType="touchUpInside" id="LZk-FU-qRV"/>
+                                    <action selector="answerButtonTouchDown" destination="mr7-6u-u8H" eventType="touchUpInside" id="GxR-rf-Eqk"/>
+                                    <action selector="answerButtonTouchDown" destination="mr7-6u-u8H" eventType="touchDown" id="w7V-r9-LJV"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="fjx-iM-ulD">
@@ -188,6 +192,8 @@
                                 </state>
                                 <connections>
                                     <action selector="answerButtonPressed:" destination="mr7-6u-u8H" eventType="touchUpInside" id="cSM-6E-7KG"/>
+                                    <action selector="answerButtonTouchDown" destination="mr7-6u-u8H" eventType="touchDown" id="j06-Kx-HfN"/>
+                                    <action selector="answerButtonTouchDown" destination="mr7-6u-u8H" eventType="touchUpInside" id="r2k-pm-dyp"/>
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Rmf-4i-wTH">
@@ -248,6 +254,31 @@
             <point key="canvasLocation" x="1078" y="138"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="MainMenuViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MainMenuViewController.h"/>
+        </class>
+        <class className="PlaySessionViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlaySessionViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="answerButtonPressed:" candidateClass="UIButton"/>
+                <relationship kind="action" name="answerButtonTouchDown"/>
+                <relationship kind="action" name="nextButtonPressed:"/>
+                <relationship kind="outlet" name="answerFour" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="answerOne" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="answerThree" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="answerTwo" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="currentQuestionIndexLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="progressView" candidateClass="UIProgressView"/>
+                <relationship kind="outlet" name="questionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="scoreLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="timeLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="SummaryViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SummaryViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
