--- a/Guess Who/MainStoryboard.storyboard
+++ b/Guess Who/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -24,7 +24,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="mr7-6u-u8H" kind="modal" modalTransitionStyle="flipHorizontal" id="rbp-nX-VvB"/>
+                                    <segue destination="mr7-6u-u8H" kind="modal" identifier="Play Session" modalTransitionStyle="flipHorizontal" id="rbp-nX-VvB"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="mLs-Sb-4bu">
@@ -96,11 +96,6 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <progressView opaque="NO" contentMode="scaleToFill" id="pwX-Ep-Z8X">
-                                <rect key="frame" x="20" y="431" width="228" height="9"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="progressTintColor" red="0.77647066119999997" green="0.80000007149999997" blue="0.94117653369999998" alpha="1" colorSpace="deviceRGB"/>
-                            </progressView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="fdst trwg sbuf buuefbwu fewufksfn oewof fbeuef tregergs 4r wtrgt r t gsfer" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UMA-RH-LKn">
                                 <rect key="frame" x="20" y="20" width="280" height="93"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -219,7 +214,6 @@
                         <outlet property="answerThree" destination="diV-3t-sdq" id="pbT-gZ-VMs"/>
                         <outlet property="answerTwo" destination="MC5-kH-eQI" id="iyk-iX-a72"/>
                         <outlet property="currentQuestionIndexLabel" destination="40H-Xd-5LG" id="3tb-m4-IXn"/>
-                        <outlet property="progressView" destination="pwX-Ep-Z8X" id="q24-HV-1u4"/>
                         <outlet property="questionLabel" destination="UMA-RH-LKn" id="keW-1Q-2zS"/>
                         <outlet property="scoreLabel" destination="Rmf-4i-wTH" id="Sg8-Mo-j7L"/>
                         <outlet property="timeLabel" destination="Dxt-VE-yOq" id="3CS-Nx-6wd"/>
@@ -254,29 +248,6 @@
             <point key="canvasLocation" x="1078" y="138"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="MainMenuViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MainMenuViewController.h"/>
-        </class>
-        <class className="PlaySessionViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlaySessionViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="answerButtonTouchDown"/>
-                <relationship kind="outlet" name="answerFour" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="answerOne" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="answerThree" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="answerTwo" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="currentQuestionIndexLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="progressView" candidateClass="UIProgressView"/>
-                <relationship kind="outlet" name="questionLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="scoreLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="timeLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="SummaryViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SummaryViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
